# Xenon-os

./: .gitmodules  CMakeLists.txt  README.md  build.sh  meson.build  run.sh
arch/: CMakeLists.txt  linker.ld  x86_64.ini
arch/x86_64/: CMakeLists.txt  bootstrap.S  cpu.cpp  cpuinfo.cpp  gdt.S  gdt.cpp  gdt.h  idt.S  interrupts.cpp  interrupts.h  linker.ld  meson.build  multiboot.S  stivale.cpp
arch/x86_64/io/: port.cpp  putc.cpp  puts.cpp
arch/x86_64/mem/: paging.cpp  paging.h
include/: acpi.h  array.h  fb.h  io.h  mem.h  print.h  starg.h  string.h  types.h
include/cpu/: cpu.h  cpuinfo.h  gdt.h  interrupts.h  paging.h
kernel/: acpi.cpp  fb.cpp  main.cpp  meson.build  printk.cpp  string.cpp  xenonfont.binh  xenonlogo.binh
kernel/mem/: mem.h  pmm.cpp  vmm.cpp
